--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
